--- a/d3_front/package.json
+++ b/d3_front/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
+    "vue-resizable": "^2.1.7",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
