--- a/API/package.json
+++ b/API/package.json
@@ -1,15 +1,5 @@
 {
-  "name": "restapi",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "DRCMIND",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongodb": "^4.11.0"
+    "express": "^4.18.2"
   }
 }
