--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,2 @@
-# Ce qu'on enlève
-*.mp4
-*.mp3
-bot.zip
-.env
-testito.txt
-
-# Exceptions 
-!assets/sounds/*
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
-
-# Dependency directories
-node_modules/
-jspm_packages/
-
-# Snowpack dependency directory (https://snowpack.dev/)
-web_modules/
-
-# Optional npm cache directory
-.npm
+node_modules
+*.env
