--- a/d3_front/package.json
+++ b/d3_front/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "axios": "^1.1.3",
+    "cors": "^2.8.5",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
     "vue-resizable": "^2.1.7",
