--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://gitlab.com/Void_Prototype/discord-command-center-v1.0#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "discord.js": "^14.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
