--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   },
   "homepage": "https://gitlab.com/Void_Prototype/discord-command-center-v1.0#readme",
   "dependencies": {
+    "@discordjs/voice": "^0.13.0",
     "discord.js": "^14.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
-    "node-fetch": "^2.6.1"
+    "ffmpeg-static": "^5.1.0",
+    "libsodium-wrappers": "^0.7.10",
+    "node-fetch": "^2.6.1",
+    "opusscript": "^0.0.8"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
