--- a/API/package.json
+++ b/API/package.json
@@ -4,10 +4,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@discordjs/voice": "^0.13.0",
     "cors": "^2.8.5",
     "discord.js": "^14.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
+    "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.1.0",
     "libsodium-wrappers": "^0.7.10",
     "opusscript": "^0.0.8"
