--- a/Bot/package.json
+++ b/Bot/package.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "@discordjs/voice": "^0.13.0",
     "discord.js": "^14.6.0",
+    "dotenv": "^10.0.0",
+    "ffmpeg-static": "^5.1.0",
+    "libsodium-wrappers": "^0.7.10",
     "node-fetch": "^2.6.1",
-    "dotenv": "^10.0.0"
+    "opusscript": "^0.0.8"
   }
 }
