--- a/Front/package.json
+++ b/Front/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "pinia": "^2.0.21",
     "sass": "^1.55.0",
     "vue": "^3.2.38",
